--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -66,3 +66,168 @@ a img {
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
+
+/* line 8, ../sass/screen.scss */
+.rainbow {
+  display: flex;
+}
+
+/* line 13, ../sass/screen.scss */
+rect {
+  width: 100;
+  height: 100;
+}
+
+/* line 18, ../sass/screen.scss */
+.color-btn {
+  width: 200px;
+  height: 200px;
+}
+
+/* line 23, ../sass/screen.scss */
+.hover-text {
+  display: none;
+  color: white;
+  position: absolute;
+}
+
+/* line 29, ../sass/screen.scss */
+.y {
+  color: brown;
+}
+
+/* line 33, ../sass/screen.scss */
+.the-shade {
+  display: none;
+}
+
+/* line 37, ../sass/screen.scss */
+.shade-bar:hover .hover-text {
+  display: inline;
+}
+
+/* line 41, ../sass/screen.scss */
+.shades .shade-bar {
+  width: 100%;
+  height: 50px;
+}
+
+/* line 46, ../sass/screen.scss */
+.red {
+  background-color: red;
+}
+
+/* line 49, ../sass/screen.scss */
+.merlot {
+  background-color: #57130e;
+}
+
+/* line 52, ../sass/screen.scss */
+.ruby {
+  background-color: #9B111E;
+}
+
+/* line 55, ../sass/screen.scss */
+.pink {
+  background-color: #EF597B;
+}
+
+/* line 59, ../sass/screen.scss */
+.orange {
+  background-color: orange;
+}
+
+/* line 62, ../sass/screen.scss */
+.tangerine {
+  background-color: #FF9966;
+}
+
+/* line 65, ../sass/screen.scss */
+.ginger {
+  background-color: #b06500;
+}
+
+/* line 68, ../sass/screen.scss */
+.bronze {
+  background-color: #cd7f32;
+}
+
+/* line 73, ../sass/screen.scss */
+.yellow {
+  background-color: yellow;
+}
+
+/* line 76, ../sass/screen.scss */
+.gold {
+  background-color: #ffcf40;
+}
+
+/* line 79, ../sass/screen.scss */
+.cream {
+  background-color: #FFFFCC;
+}
+
+/* line 82, ../sass/screen.scss */
+.dandelion {
+  background-color: #f0e130;
+}
+
+/* line 87, ../sass/screen.scss */
+.green {
+  background-color: green;
+}
+
+/* line 90, ../sass/screen.scss */
+.forest {
+  background-color: #266A2E;
+}
+
+/* line 93, ../sass/screen.scss */
+.emerald {
+  background-color: #53C670;
+}
+
+/* line 96, ../sass/screen.scss */
+.paris {
+  background-color: #00a86b;
+}
+
+/* line 100, ../sass/screen.scss */
+.blue {
+  background-color: blue;
+}
+
+/* line 103, ../sass/screen.scss */
+.azure {
+  background-color: #0038A8;
+}
+
+/* line 106, ../sass/screen.scss */
+.turquoise {
+  background-color: #34DDDD;
+}
+
+/* line 109, ../sass/screen.scss */
+.tiffany {
+  background-color: #0abab5;
+}
+
+/* line 113, ../sass/screen.scss */
+.purple {
+  background-color: purple;
+}
+
+/* line 116, ../sass/screen.scss */
+.amethyst {
+  background-color: #9966cc;
+}
+
+/* line 119, ../sass/screen.scss */
+.orchid {
+  background-color: #af65a2;
+}
+
+/* line 122, ../sass/screen.scss */
+.violet {
+  background-color: #663399;
+}
